<resources>
    <string name="app_name">OrderSystem</string>
    <string name="personal">Personal</string>
    <string name="kock">Kock</string>
    <string name="new_activity">New activity</string>
    <string name="dagens_lunch">Dagens lunch</string>
    <string name="a_la_cart">A La Carté</string>
    <string name="table_1">Table 1</string>
    <string name="table_2">Table 2</string>
    <string name="table_3">Table 3</string>
    <string name="table_4">Table 4</string>
    <string name="table_5">Table 5</string>
    <string name="table_6">Table 6</string>
    <string name="table_7">Table 7</string>
    <string name="table_8">Table 8</string>
    <string name="a_la_carte">A La Carte</string>
    <string name="table_x">Table X</string>
    <string name="r_tt">Rätt</string>
    <string name="v_lj_vilken_r_tt">Välj vilken rätt</string>
    <string name="dricka">Dricka</string>
    <string name="l_gg_till_anteckningar">Lägg till anteckningar</string>
    <string name="anteckningar">Anteckningar</string>
    <string name="v_ljd_dricka">Väljd dricka</string>
    <string name="l_gg_till">Lägg till</string>
    <string name="hamburgare" />
    <string name="plus">+</string>
    <string name="best_llning">Beställning</string>
    <string name="decrement">-</string>
    <string name="zero">0</string>
    <string name="l_gg_till_order">Lägg till order</string>
    <string name="varmr_tt">Varmrätt</string>
    <string name="note">Note</string>
    <string name="f_rr_tt">Förrätt</string>
    <string name="efterr_tt">Efterrätt</string>
    <string name="skicka_till_k_k">Skicka till kök</string>
    <string-array name="courses">
        <item>Hamburgare</item>
        <item>Pizza</item>
        <item>Sallad</item>
        <item>Köttbullar</item>
        <item>Sushi</item>
    </string-array>
    <string-array name="drinks">
        <item>Coca-Cola</item>
        <item>Fanta</item>
        <item>Sprite</item>
        <item>Zingo</item>
        <item>Vatten</item>
    </string-array>
</resources>