<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="0.7"/>

    <Button
        android:id="@+id/incrementBtn"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:backgroundTint="#DEBE5A"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:onClick="Increment"/>

    <TextView
        android:id="@+id/orderAmount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="0.05"
        android:text="@string/zero"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/decrementBtn"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:backgroundTint="#DEBE5A"
        android:text="@string/decrement"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:onClick="Decrement"/>

</LinearLayout>