<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="4dp">

    <TextView
        android:id="@+id/totalItemView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#DEBE5A"
        android:text="@string/decrement"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/totalItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/addNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DEBE5A"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="@string/note"/>
</LinearLayout>