<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PersonalPage1">

    <Button
        android:id="@+id/dagensLunchBtn"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#DEBE5A"
        android:text="@string/dagens_lunch"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aLaCarteBtn"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#DEBE5A"
        android:text="@string/a_la_cart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dagensLunchBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/dagensLunchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logga" />

    <TextView
        android:id="@+id/personalHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="90dp"
        android:background="#DADADA"
        android:text="@string/personal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>